[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/cubic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/GameHUD.gd" type="Script" id=2]
[ext_resource path="res://Sprite/pause.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=4]
size = 64
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=6]
resource_name = "nextSecond"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 100, 100 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.501961 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0
shadow_color = Color( 0.219608, 1, 0, 0.25098 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.752941 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color( 0.219608, 1, 0, 0.25098 )
shadow_size = 10

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
anchor_right = 1.0
margin_top = 48.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 0.5

[node name="Resum" type="Label" parent="."]
pause_mode = 2
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 25.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 360, 64 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 0.470588 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Resum"]
anims/nextSecond = SubResource( 6 )

[node name="Pause" type="Button" parent="."]
pause_mode = 2
margin_left = 24.0
margin_top = 24.0
margin_right = 104.0
margin_bottom = 104.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
enabled_focus_mode = 0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ResumTimer" to="." method="_on_ResumTimer_timeout"]
[connection signal="animation_finished" from="Resum/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
